kubernetes/apps/workspaces/coder/app/ingress.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/master/v1.29.0-standalone-strict/ingress-networking-v1.json
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: coder
  namespace: workspaces
spec:
  ingressClassName: tailscale
  rules:
    - host: coder
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: coder
                port:
                  number: 80
  tls:
    - hosts:
        - coder
